--- a/src/pages/search-trips/search-trips.html
+++ b/src/pages/search-trips/search-trips.html
@@ -1,7 +1,7 @@
 <!-- -->
 <ion-header>
   <ion-navbar color="primary">
-    <ion-title>Search Activities</ion-title>
+    <ion-title>Inserisci il tuo CAP</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -12,18 +12,14 @@
       <ion-col col-12>
         <!--search form-->
         <ion-card no-margin margin-bottom class="full-width">
-          <ion-item tappable (click)="choosePlace('from')" class="border-bottom">
-            <ion-icon name="search" color="primary" item-left></ion-icon>
-            <span>{{ search.name }}</span>
-          </ion-item>
-          <ion-item>
-            <ion-icon name="md-calendar" color="primary" item-left></ion-icon>
-            <ion-datetime class="no-pl" displayFormat="DD/MM/YYYY" pickerFormat="DD/MM/YYYY" [(ngModel)]="search.date"></ion-datetime>
+          <ion-item class="border-bottom">
+            <ion-icon name="create" color="primary" item-right></ion-icon>
+            <ion-input type="text" required [(ngModel)]="cap" placeholder="digita il CAP es. 00100"></ion-input>
           </ion-item>
         </ion-card>
 
         <button ion-button icon-start block no-margin color="primary" class="round" tappable (click)="doSearch()">
-          <ion-icon name="search"></ion-icon> Search
+          CONTINUA
         </button>
 
       </ion-col>
