--- a/src/pages/booking-list/booking-list.html
+++ b/src/pages/booking-list/booking-list.html
@@ -3,7 +3,7 @@
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
-        <ion-title>Bookings</ion-title>
+        <ion-title>Risultati preventivo {{cap}}</ion-title>
     </ion-navbar>
 </ion-header>
 
@@ -11,21 +11,21 @@
   <ion-grid fixed>
     <ion-row>
       <ion-col col-12 margin-bottom>
-        <ion-card *ngIf="!bookings.length" class="primary-bg" margin-top>
+        <ion-card *ngIf="!agencies.length" class="primary-bg" margin-top>
           <ion-card-content>
-          	<p text-center class="text-white">You have no bookings yet.</p>
+          	<p text-center class="text-white">Nessuna agenzia</p>
           </ion-card-content>
         </ion-card>
 
         <ion-list>
-            <ion-item-sliding *ngFor="let booking of bookings">
-                <button ion-item (click)="itemTapped(booking.hotel)">
+            <ion-item-sliding *ngFor="let agency of agencies">
+                <button ion-item (click)="itemTapped(agency.hotel)">
                     <ion-thumbnail item-left>
-                        <img src="{{booking.hotel.thumb}}"/>
+                        <img src="https:/lastello.it/{{agency.profile_photo}}"/>
                     </ion-thumbnail>
-                    <h2>{{booking.hotel.name}}</h2>
-                    <p>{{booking.hotel.address}} ∙ {{booking.hotel.price  | currency }}</p>
-                    <ion-badge class="green-bg">Booked</ion-badge>
+                    <h2>{{agency.name}}</h2>
+                    <p>{{agency.price_from}} €</p>
+                    <ion-badge class="green-bg">Vedi</ion-badge>
                 </button>
             </ion-item-sliding>
         </ion-list>
