added map and cap request

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -28,7 +28,7 @@
           <img src="assets/img/angel.png">
           <h2 class="fw500">Il Comparatore di funerali</h2>
           <h3 ion-text color="light">Realizza un preventivo per il funerale e confronta le migliori agenzie funebri della tua zona</h3>
-          <button ion-button large margin-top color="light" round (click)="selectCAP()">
+          <button ion-button large margin-top color="default" outline round (click)="selectCAP()" style="background-color:#fff;">
             FAI UN PREVENTIVO
           </button>
       </ion-card-content>
