--- a/src/pages/search-trips/search-trips.html
+++ b/src/pages/search-trips/search-trips.html
@@ -23,8 +23,12 @@
         </button>
 
       </ion-col>
+
     </ion-row>
+
+
   </ion-grid>
+  <div id="map-detail"></div>
 </ion-content>
 
 <ion-footer>
