--- a/src/pages/search-trips/search-trips.html
+++ b/src/pages/search-trips/search-trips.html
@@ -6,7 +6,7 @@
 </ion-header>
 
 
-<ion-content padding class="search-trips common-bg">
+<ion-content class="search-trips common-bg">
   <ion-grid fixed>
     <ion-row>
       <ion-col col-12>
